and, most importantly, Aldoir Ventura <aldoir@users.sourceforge.net>
who gave us Uebimiau, on which Telaen is based, in the first place!

LICENSE:
Telaen is released under the GPL.


CHANGELOG:

----------------------------------------------------------------
Telaen:
----------------------------------------------------------------

1.0.0:

 * Rename of class files and other notices from Uebimiau to
   Telaen.

----------------------------------------------------------------
Uebimiau - the "jimjag" patches:
----------------------------------------------------------------
--------
2.7.8p3
--------
 * "What is SPAM" regex now definable for each UM class.

 * Enable auto-population of the spam folder and
   add a user pref to auto-delete it at logout time.
   Spam folder options require the _autospamfolder
   variable in the Uebimiau class be TRUE.
     o en_UK.txt: spam_extended
                  prf_empty_spam_on_exit
     o preferences.htm

 * Make the spam folder a system folder.

 * If using cookies, have the login page explain why
   a login may not have succeeded due to cookie error
   (eg: user does not have cookies enabled). Only important
   if using cookie security. This required changes to the
   login themes and the lang file.
     o en_UK.txt :lng_cookie_not_enabled
                  lng_cookie_not_valid
     o login.htm

 * Store version number in pref's file; since new versions
   might change or add preferences, this means that UM
   can now direct the user to their Preferences page
   as soon as the login after an upgrade (similar to
   the First Login). Updated preference page theme.
     o preferences.htm

 * Address book now usable with CC and BCC fields.
     o newmsg.htm

 * Fold in many improvements submitted by MBR (Martin
   Blapp) regarding file and folder speedups, detection
   of ATOP and pipelining support, and spam folders.

--------
2.7.8p2
--------
 * Change format of session ID to be more file system
   friendly.
