@@ -1,8 +1,5 @@
 Telaen TODO List: Pick an issue and have fun!
 
- *) Read as Unread:
-    Make the "clean out inbox" function a user selectable option
-
  *) SPAM Detection:
     Make the "spam detection" regex user controllable, not just
     admin controllable. Likely requires looking at X-Spam-Level
