@@ -267,6 +267,7 @@ $default_preferences = Array(
 	"save_to_sent_default"		=> yes,		# send sent messages to sent
 	"empty_trash_default"		=> yes,		# empty trash on logout
 	"empty_spam_default"		=> yes,		# empty spam on logout
+	"unmark_read_default"		=> yes,		# Unmark READ messages as read (appear as unread)
 	"sortby_default"		=> "date",	# alowed: "attach","subject","fromname","date","size"
 	"sortorder_default"		=> "DESC",	# alowed: "ASC","DESC"
 	"rpp_default"			=> 20,		# records per page (messages), alowed: 10,20,30,40,50,100,200
