@@ -76,6 +76,9 @@
 					<td class=default colspan=2><input type=checkbox name=f_empty_spam_on_exit value="1"{$umEmptySpamOnExit}><acronym style="cursor: hand;" OnClick="f_empty_spam_on_exit.click()">{#prf_empty_spam_on_exit#}</acronym></td>
 				</tr>
 				<tr>
+					<td class=default colspan=2><input type=checkbox name=f_unmark_read_on_exit value="1"{$umUnmarkReadOnExit}><acronym style="cursor: hand;" OnClick="f_unmark_read_on_exit.click()">{#prf_unmark_read_on_exit#}</acronym></td>
+				</tr>
+				<tr>
 					<td colspan=2  class=headers><b>{#prf_sent_title#}</b></td>
 				</tr>
 				<tr>
